增加使用文档

--- a/code/templates/basic/model.java.jinja
+++ b/code/templates/basic/model.java.jinja
@@ -10,6 +10,8 @@ import java.io.Serializable;
 import java.math.BigDecimal;
 import java.util.Date;
 
+import java.io.Serializable;
+
 /**
  * {{meta.comment}}
  * 
