--- a/code/templates/basic/dto.java.jinja
+++ b/code/templates/basic/dto.java.jinja
@@ -1,8 +1,11 @@
 package {{meta.package}}.dto;
 
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
 import lombok.Getter;
 import lombok.Setter;
-import io.swagger.annotations.ApiModelProperty;
+
+import java.io.Serializable;
 
 /**
  * {{meta.comment}}
