--- a/code/templates/ssm/mapper.java.jinja
+++ b/code/templates/ssm/mapper.java.jinja
@@ -1,8 +1,7 @@
-package {{meta.package}}.dao;
+package {{meta.package}}.{{meta.module}}.dao;
 
-import java.util.List;
-import tk.mybatis.mapper.common.Mapper;
-import {{meta.package}}.model.{{meta.name}};
+import com.dcjet.cs.base.repository.BasicMapper;
+import {{meta.package}}.{{meta.module}}.model.{{meta.name}};
 
 /***
  * {{meta.comment}}
@@ -11,6 +10,6 @@ import {{meta.package}}.model.{{meta.name}};
  * @author builder
  * @date: {{meta.get_date()}}
  */
-public interface {{meta.name}}Mapper extends Mapper<{{meta.name}}> {
+public interface {{meta.name}}Mapper extends BasicMapper<{{meta.name}}> {
 
 } 
