--- a/code/templates/ssm/mapper.xml.jinja
+++ b/code/templates/ssm/mapper.xml.jinja
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
-<mapper namespace="{{meta.package}}.dao.{{meta.name}}Mapper">
-    <resultMap id="resultMap" type="{{meta.package}}.model.{{meta.name}}">
-        {%- for field in meta.fields %}
-        {%- if field.primary %} 
-        <id column="{{field.column}}" property="{{field.name}}" jdbcType="{{field.jdbc_type}}"/>
-        {%- else %}
-        <result column="{{field.column}}" property="{{field.name}}" jdbcType="{{field.jdbc_type}}"/>
-        {%- endif %}
-        {%- endfor %}
-    </resultMap>
+<mapper namespace="{{meta.package}}.{{meta.module}}.dao.{{meta.name}}Mapper">
     <sql id="columns">
         {% for field in meta.fields -%}
         t.{{field.column}}{% if not loop.last %},{{"\n\t\t"|e}}{% endif %}
@@ -22,7 +13,7 @@
         </if>{{"\n\t\t"|e}}
         {%- endfor %} 
     </sql>  
-    <select id="getList" parameterType="map" resultMap="resultMap">
+    <select id="getList" parameterType="{{meta.package}}.{{meta.module}}.model.{{meta.name}}" resultType="{{meta.package}}.{{meta.module}}.model.{{meta.name}}">
         SELECT 
         <include refid="columns"/>
         FROM {{meta.table}} t
@@ -30,32 +21,4 @@
             <include refid="condition"></include>
         </where>
     </select>
-    <insert id="insertBatch" parameterType="java.util.List">
-        INSERT INTO {{meta.table}}
-        (
-            {% for field in meta.fields -%}
-            {{field.column}}{% if not loop.last %},{{"\n\t\t\t"|e}}{% endif %}
-            {%- endfor %}  
-        )
-        SELECT t.* FROM (
-        <foreach item="item" index="index" collection="list" separator="union all">
-        (
-            SELECT{{"\n\t\t\t"|e}}
-            {%- for field in meta.fields -%}
-            #{item.{{ field.name }},jdbcType={{field.jdbc_type}}}{% if not loop.last %},{{"\n\t\t\t"|e}}{% endif %}
-            {%- endfor %}
-            FROM DUAL
-        )
-        </foreach>
-        ) t
-    </insert>
-
-    <delete id="deleteBySids"  parameterType="java.util.List">
-        delete from {{meta.table}}
-        <where>
-            <foreach collection="list" item="item" open="(" separator="or" close=")">
-                sid=#{item}
-            </foreach>
-        </where>
-    </delete>
 </mapper>
