--- a/code/templates/ssm/serviceImpl.java.jinja
+++ b/code/templates/ssm/serviceImpl.java.jinja
@@ -18,7 +18,8 @@ import {{meta.package}}.dto.{{meta.module}}.{{meta.name}}SearchParam;
  * @author builder
  * @date: {{meta.get_date()}}
  */
-public class {{meta.name}}ServiceImpl
+ @Service
+public class {{meta.name}}SServiceImperviceImpl
         extends BasicServiceImpl<{{meta.name}}Mapper, {{meta.name}}, {{meta.name}}Dto, {{meta.name}}Param, {{meta.name}}SearchParam, {{meta.name}}DtoMapper>
         implements {{meta.name}}Service {
 }
