--- a/code/templates/ssm/serviceImpl.java.jinja
+++ b/code/templates/ssm/serviceImpl.java.jinja
@@ -9,6 +9,7 @@ import {{meta.package}}.{{meta.module}}.service.{{meta.name}}Service;
 import {{meta.package}}.dto.{{meta.module}}.{{meta.name}}Dto;
 import {{meta.package}}.dto.{{meta.module}}.{{meta.name}}Param;
 import {{meta.package}}.dto.{{meta.module}}.{{meta.name}}SearchParam;
+import org.springframework.stereotype.Service;
 
 
 /***
@@ -18,8 +19,8 @@ import {{meta.package}}.dto.{{meta.module}}.{{meta.name}}SearchParam;
  * @author builder
  * @date: {{meta.get_date()}}
  */
- @Service
-public class {{meta.name}}SServiceImperviceImpl
+@Service
+public class {{meta.name}}ServiceImpl
         extends BasicServiceImpl<{{meta.name}}Mapper, {{meta.name}}, {{meta.name}}Dto, {{meta.name}}Param, {{meta.name}}SearchParam, {{meta.name}}DtoMapper>
         implements {{meta.name}}Service {
 }
