--- a/code/templates/ssm/dto.java.jinja
+++ b/code/templates/ssm/dto.java.jinja
@@ -21,7 +21,7 @@ import java.util.Date;
 public class {{meta.name}}Dto extends BasicDto implements Serializable {
     private static final long serialVersionUID = 1L;
 
-    {% for field in meta.fields %}
+    {% for field in meta.fields if not field.filter %}
     /**
      * {%- if field.comment is not none %}{{field.comment}}{%- endif %}
      */
