--- a/code/templates/ssmp/dto.java.jinja
+++ b/code/templates/ssmp/dto.java.jinja
@@ -16,7 +16,7 @@ import io.swagger.annotations.ApiModelProperty;
 public class {{meta.name}}Dto implements Serializable {
     private static final long serialVersionUID = 1L;
 
-    {% for field in meta.fields %}
+    {% for field in meta.fields if not field.filter %}
     /**
      * {%- if field.comment is not none %}{{field.comment}}{%- endif %}
      */
