--- a/code/templates/ssmp/model.java.jinja
+++ b/code/templates/ssmp/model.java.jinja
@@ -27,7 +27,7 @@ import java.util.Date;
 public class {{meta.name}} implements Serializable {
     private static final long serialVersionUID = 1L;
 
-    {% for field in meta.fields %}
+    {% for field in meta.fields if not field.filter %}
     /**
      * {{field.comment}}
      */
